Added REPL and exported required struct/enum and function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-    "lexer",
+    "lexer", "repl",
 ]
-
+[workspace.dependencies]
+lexer={ path = "lexer" }
